<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eco Solar Breizh</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="title_bluetooth_connection_section">Bluetooth</string>
    <string name="title_dashboard_section">Tableau de bord</string>
    <string name="connected">Connected</string>
    <string name="title_solar_panel_electical_power_section">Panneaux</string>
    <string name="solar_panel_51">Panel 51</string>
    <string name="solar_panel_52">Panel 52</string>
    <string name="title_motor_section">Moteurs</string>
    <string name="full_headlights">full_headlights</string>
    <string name="warnings">button_warnings</string>
    <string name="deeped_headlights">deeped_headlights</string>
    <string name="cells">Panneaux</string>
    <string name="motors">Moteurs</string>
    <string name="version">version</string>
    <string name="electricite">Electricité</string>
    <string name="temperature">Température</string>
    <string name="vitesse">Vitesse</string>
    <string name="kelly_1_lsb">kelly 1 lsb</string>
    <string name="tension_batterie">Tension batterie</string>
    <string name="kelly_gauche">Kelly Gauche</string>
    <string name="lsb">LSB</string>
    <string name="msb">MSB</string>
    <string name="detail">Détails : </string>
    <string name="signification">Signification : </string>
    <string name="valeur_hexa">Valeur Héxadécimale : </string>
    <string name="title_kelly_section">Kelly</string>
    <string name="kelly_droit">Kelly Droit</string>

</resources>
