<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        <bzh.eco.solar.view.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electricite"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:padding="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        <View style="@style/VerticalDivider"/>

        <ListView
                android:id="@+id/list_view_electrical_power"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
    </LinearLayout>

    <View style="@style/HorizontalDivider"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

        <bzh.eco.solar.view.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:padding="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        <View style="@style/VerticalDivider"/>

        <ListView
                android:id="@+id/list_view_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
    </LinearLayout>

    <View style="@style/HorizontalDivider"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

        <bzh.eco.solar.view.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vitesse"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:padding="10dp"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        <View style="@style/VerticalDivider"/>

        <ListView
                android:id="@+id/list_view_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
    </LinearLayout>
</LinearLayout>